16.12.2010:
        - Fixed track list track moving/resizing - added ev->buttons() check to mouseMoveEvent(). (Tim)
15.12.2010:
        - Major cleanup in the #includes. Emptied all.ha nnd moved its contents to individual files.
          The build is roughly 20% faster now. (Orcan)
        - Fixed track list drawing - removed double buffer pixmap. Test OK. (Tim)  
14.12.2010:
        - Fixed corruption on track info instrument patch button due to latin1() conversions. (Tim)
          Changed MidiInstrument::getPatchName() and EditInstrument::getPatchName() to return QString.
13.12.2010:
        - List the available locales in the --help output. (Orcan)
        - Fixed audio/midi control right-click automation popups were greyed out due to typo. (Tim)
        - Fixed some QMenu usages without parent and/or delete. (Tim)
        - DeicsOnze: Fixed: Crash in ctor, _preset not init. by time loadConfiguration called. Re-arranged. 
          And 3 popup QMenu usages without delete. Test OK. (Tim)
        - Deicsonze: Fixed all missing icons throughout. Added qrc file, changed ui file. Looks nice now. (Tim) 
12.12.2010:
        - Integrated the translation system into cmake. Added a -DUPDATE_TRANSLATIONS flag to cmake
          which will update the .ts files in the source tree with the newest strings. I used this to
          update the existing translations. Also I removed the .qm files from the SVN, as they will
          be now installed from the build tree. (Orcan)
        - Added a -l flag to the muse executable to override the locale detection, mostly for testing
          purposes. (Orcan)
        - Updated the Russian translation thanks to Alex, alex54m -> mail.ru
        - When updating the .ts files, by adding proper dependencies, make sure all targets are 
          scanned. Otherwise .ts files may miss some strings. (Orcan)
11.12.2010:
      * Feature: Added default midi track in/out channels to midi ports list. (Tim)